2004-08-11  Alexander Larsson  <alexl@redhat.com>

	* libgnomevfs/gnome-vfs-unix-mounts.c (_gnome_vfs_unix_mount_get_unix_device):
	Fix some statfs issues and increase select timeout (bug 140322)
	Patch from Joe Marcus Clarke

2004-08-11  Alexander Larsson  <alexl@redhat.com>

	* libgnomevfs/gnome-vfs-file-info.h:
	Remove strange comment about removing GnomeVFSFileType.

2004-08-10  Kjartan Maraas  <kmaraas@gnome.org>

	* libgnomevfs/eggdesktopentries.c: Added #include <config.h>
	for working i18n.

2004-08-10  Alexander Larsson  <alexl@redhat.com>

	* configure.in:
	Require howl 0.9.6
	
	* libgnomevfs/gnome-vfs-dns-sd.c:
	* modules/dns-sd-method.c:
	Update howl usage to 0.9.6 API.

2004-08-09  Ryan Lortie <desrt@desrt.ca>

	* modules/sftp-method.c: fix potential deadlock in sftp_get_connection

2004-08-03  William Jon McCann  <mccann@jhu.edu>
 
 	* modules/sftp-method.c (sftp_connect): write responses to
 	tty, fixes #147444.

2004-08-09  Ray Strode  <rstrode@redhat.com>

	* libgnomevfs/eggdesktopentries.c (egg_find_file_in_data_dirs):
	free path string when done with it (Spotted by Kjarten Maraas,
	bug 149717).

2004-08-09  Christophe Fergeau  <teuf@gnome.org>

	* libgnomevfs/gnome-vfs-resolve.c: reordered #includes (include glib
	  headers after system headers) to fix a compilation breakage with gcc
	  2.95

2004-08-09  Ryan Lortie  <desrt@desrt.ca>

	* libgnomevfs/gnome-vfs-utils.c (gnome_vfs_get_volume_free_space):
	Fixed small memory leak. Fixes bug #149333.

2004-08-08  Christian Kellner  <gicmo@gnome-de.org>

	* modules/http-neon-method.c (do_get_file_info):
	Don't free HttpContext if http_context_open failed.
	Patch from desrt@desrt.ca. Fixes bug #149268.

2004-08-06  Christian Kellner  <gicmo@gnome-de.org>

	* libgnomevfs/gnome-vfs-resolve.c (gnome_vfs_resolve_next_address):
	Small cleanup.
	* libgnomevfs/gnome-vfs-address.c: Added brackets around macros. Fixed
	wrong argument check. Patch from desrt@desrt.ca. Fixes bug #149242.
